# tigz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: CMakeLists-bs_thread_pool.txt.in  CMakeLists-cxxopts.txt.in  CMakeLists-libdeflate.txt.in  CMakeLists-rapidgzip.txt.in  CMakeLists-zlibng.txt.in  paraz_version.h.in  tigz_version.h.in
include/: paraz.hpp  tigz.hpp  tigz_compressor.hpp  tigz_decompressor.hpp
src/: main.cpp  paraz.cpp  tigz.cpp
